--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,11 +1,21 @@
 ---
-title: Welcome to Middleman
+title: Armstrong & Gunnarsson Galleries, Events and Works
 ---
 
-.welcome
-  %h1 Armstrong & Gunnarsson
-  %p
-    Please bear with us while our website is being built.
-  %p
-    = link_to "Contact us via Mail", "mailto:info@armstrongandgunnarsson.com", target: "_blank", class: "icon mail"
-    = link_to "Visit us on Instagram", "https://instagram.com/armstrong_gunnarsson", target: "_blank", class: "icon instagram"
+.events
+  .image
+    =image_tag 'tat.jpg'
+
+  .text
+    %h3 The Artist Table
+    %p
+      The next event
+      The Artist Table
+      will be an immersive experience which explores the boundaries and experiential qualities of food and art.
+      Salon owner and head chef Nicholas Balfe will be working along side artists Kirsty Armstrong, Kiera Bennet, Archie Franks, Jeanette Gunnarsson and Caroline Jane Harris.
+      A select number of guests attending the ticketed event will be invited to engage with the artworks from a truly unique perspective.
+      The Artist Table will provide a platform for the artists to discuss their work, which will be paired with a four course menu, designed by Nicholas Balfe.
+      The event will then be followed by an open group show featuring further works from the artists involved.
+
+    %p
+      Tickets will go on sale shortly.
