--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,20 +1,20 @@
-@charset "utf-8";
-@import "normalize";
+@charset 'utf-8';
+@import 'normalize';
+@import 'bourbon';
+@import 'base/base';
+@import 'neat';
 
-body {
-  text-align: center;
-  color: rgba(0,0,0,0.8);
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 1em;
+@import 'layout';
+
+img {
+  max-width: 100%;
 }
 
-
 h1 {
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 2.8em;
   font-weight: 400;
-  margin: 0;
-  margin-top: 5rem;
+  margin: 0 0 2rem;
 }
 
 .icon {
@@ -28,14 +28,14 @@ h1 {
 }
 
 .mail {
-  background-image: image-url("mail.svg");
+  background-image: image-url('mail.svg');
 }
 .instagram {
-  background-image: image-url("instagram.svg");
+  background-image: image-url('instagram.svg');
 }
 
 p {
-  margin: 3em 0;
+  margin: 1em 0;
   font-size: 1.1em;
   font-weight: 300;
 
@@ -46,29 +46,5 @@ p {
     color: white;
     text-decoration: none;
     transition: color 0.1s linear;
-  }
-}
-
-.welcome {
-  -webkit-animation-name: welcome;
-  -webkit-animation-duration: .9s;
-}
-
-@-webkit-keyframes welcome {
-  from {
-    -webkit-transform: scale(0);
-    opacity: 0;
-  }
-  50% {
-   -webkit-transform: scale(0);
-   opacity: 0;
-  }
-  82.5% {
-    -webkit-transform: scale(1.03);
-    -webkit-animation-timing-function: ease-out;
-    opacity: 1;
-  }
-  to {
-    -webkit-transform: scale(1);
   }
 }
