--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -4,12 +4,11 @@ title: Armstrong & Gunnarsson Galleries, Events and Works
 
 .events
   .image
-    =image_tag 'tat.jpg'
+    =image_tag 'the-artist-table.png'
 
   .text
-    %h3 The Artist Table
+    %h3 Upcoming event: The Artist Table
     %p
-      The next event
       The Artist Table
       will be an immersive experience which explores the boundaries and experiential qualities of food and art.
       Salon owner and head chef Nicholas Balfe will be working along side artists Kirsty Armstrong, Kiera Bennet, Archie Franks, Jeanette Gunnarsson and Caroline Jane Harris.
@@ -17,5 +16,6 @@ title: Armstrong & Gunnarsson Galleries, Events and Works
       The Artist Table will provide a platform for the artists to discuss their work, which will be paired with a four course menu, designed by Nicholas Balfe.
       The event will then be followed by an open group show featuring further works from the artists involved.
 
-    %p
-      Tickets will go on sale shortly.
+    %p.tickets
+      %a.tickets{ href: "https://billetto.co.uk/en/events/the-artist-table" } Buy Tickets Online
+      %span.tickets (Sales start on Tuesday, 12. April 9:00am)
