--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -34,17 +34,28 @@ h1 {
   background-image: image-url('instagram.svg');
 }
 
+.tickets-live {
+  color: #ccc;
+}
+
 p {
   margin: 1em 0;
   font-size: 1.1em;
   font-weight: 300;
 
-  a {
-    border: 1px solid white;
+  &.tickets {
+    margin-top: 2rem;
+  }
+
+  a.tickets {
     border-radius: 3px;
     padding: 0.75em 0.7em;
     color: white;
+    background-color: #b72109;
     text-decoration: none;
     transition: color 0.1s linear;
+  }
+  span.tickets {
+    color: #888
   }
 }
