--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -4,10 +4,10 @@ title: Armstrong & Gunnarsson Galleries, Events and Works
 
 .events
   .image
-    =image_tag 'the-artist-table.png'
+    = image_tag 'the-artist-table.png'
 
   .text
-    %h3 Upcoming event: The Artist Table
+    %h3 Past event: The Artist Table
     %p
       The Artist Table
       will be an immersive experience which explores the boundaries and experiential qualities of food and art.
@@ -15,6 +15,3 @@ title: Armstrong & Gunnarsson Galleries, Events and Works
       A select number of guests attending the ticketed event will be invited to engage with the artworks from a truly unique perspective.
       The Artist Table will provide a platform for the artists to discuss their work, which will be paired with a four course menu, designed by Nicholas Balfe.
       The event will then be followed by an open group show featuring further works from the artists involved.
-
-    %p.tickets
-      %a.tickets{ href: "https://billetto.co.uk/en/events/the-artist-table" } Buy Tickets Online
